--- a/Aula 07/estruturaSelecao.html
+++ b/Aula 07/estruturaSelecao.html
@@ -34,7 +34,18 @@
         Operador Condicional Ternário
         condicao ? <instruções caso verdadeiro> : <instruções caso falso>
 
-        
+
+        Switch
+        switch (variavel) {
+            case valor1:
+                // comandos
+                break;
+            case valor2:
+                // comandos
+                break;
+            default:
+                // comandos
+        }
         */
 
         // Exemplo 01
