--- a/Aula 07/estruturaSelecao.html
+++ b/Aula 07/estruturaSelecao.html
@@ -16,8 +16,8 @@
             let valor2 = "Teste2"
         }
 
-        console.log(valor1)
-        console.log(valor2)
+        console.log(valor1) // "Teste1"
+        console.log(valor2) // Erro
 
 
         Estrutura de Seleção Simples
