--- a/Aula 07/operadoresLogicos.html
+++ b/Aula 07/operadoresLogicos.html
@@ -18,7 +18,11 @@
         ------
         V | F
         F | V
-        
+
+        let numero = 11
+        if (numero > 10 && numero < 90)
+                  V              V
+        Só vai ser verdadeiro quando os dois valores forem verdadeiros
         Tabela Verdade && (AND) - Conjução
         A | B | A && B
         --|---|-------
@@ -27,6 +31,10 @@
         F | V |   F
         F | F |   F
 
+        let numero = 11
+        if (numero > 10 || numero > 90)
+                   V            F
+        Só vai ser falso quando os dois valores forem falsos
         Tabela Verdade || (OR) - Disjunção
         A | B | A || B
         --|---|-------
