--- a/Aula 17/funcoes.html
+++ b/Aula 17/funcoes.html
@@ -79,8 +79,8 @@
             function checarIdade(idade) {
                 if (idade >= 18) {
                     return true
-                } 
-                return confirm("Você tem permissão dos seus pais?")
+                }
+                return confirm("Você tem permissão dos seus pais?")                
             }
 
             let idade = +prompt("Qual é a sua idade?")
@@ -91,7 +91,7 @@
                 alert("Acesso negado!")
             }
         }
-        // Considerando que o return sai da função existe uma forma de melhorar o código acima?
+        // Considerando que o return sai da função, existe uma forma de melhorar o código acima?
         
         
         // Se quisermos retornar uma expressão em múltiplas linhas temos que usar ():
