--- a/Aula 17/funcoesJS.html
+++ b/Aula 17/funcoesJS.html
@@ -27,7 +27,7 @@
         }  
         
         /*
-        A diferença entra declaração de funções e expressões de função é o momento em
+        A diferença entre declaração de funções e expressões de função é o momento em
         que elas são criadas pela engine do JS. Uma expressão de função só é criada 
         quando a execução do algoritmo alcança a linha da expressão. Já uma declaração
         de função é criada no momento em que o código é executado. 
