--- a/Aula 17/correcaoExerciciosFuncoes.html
+++ b/Aula 17/correcaoExerciciosFuncoes.html
@@ -232,7 +232,7 @@
                 meses = +prompt("Digite a quantidade de meses"),
                 dias = +prompt("Digite a quantidade de dias")                        
 
-            console.log(calculaDias(anons, meses, dias))
+            console.log(calculaDias(anos, meses, dias))
         }
 
         
