--- a/Aula 39/agendando-funcoes.html
+++ b/Aula 39/agendando-funcoes.html
@@ -57,8 +57,15 @@
         e faça ele aparecer na tela no formato: 
         hh:mm:ss
 
-        3) Faça uma timer através da função criaTimer(tempo, callback) que receba o valor inicial através de um <input type="time"> 
+        3) Faça um timer através da função criaTimer(tempo, callback) que receba o valor inicial através de um <input type="time"> 
         e dispare uma função callback quando o tempo acabar.
+
+        4) Crie um cronômetro que contenha:
+            - Botão de início - iniciar o cronômetro.
+            - Botão de parar - parar o cronômetro.
+            - Botão de reset - resetar o tempo para 0.
+            - Display que mostra o número de segundos passados.
+
         */
     </script>
 </body>
