--- a/Aula 39/agendando-funcoes.html
+++ b/Aula 39/agendando-funcoes.html
@@ -42,6 +42,15 @@
         // Cancelando o setInterval
         setTimeout(() => clearInterval(idInterval), 5000)
 
+        // Elas só executam após o script atual
+        // let i = 0
+        // setTimeout(() => alert(i), 1)
+        // for (let j = 0; j < 100000000; j++) {
+        //     i++
+        // }
+
+
+        // https://developer.mozilla.org/pt-BR/docs/Learn/JavaScript/Asynchronous/Timeouts_and_intervals
 
         /*
         Exercícios
@@ -65,7 +74,6 @@
             - Botão de parar - parar o cronômetro.
             - Botão de reset - resetar o tempo para 0.
             - Display que mostra o número de segundos passados.
-
         */
     </script>
 </body>
