--- a/Aula 42/errosCustomizados.html
+++ b/Aula 42/errosCustomizados.html
@@ -43,7 +43,36 @@
             } else {
                 console.log(err)
             }
-        }                
+        }   
+        
+        /*
+        Exercícios
+
+        1) Crie uma função somar(n1, n2) que some dois números caso o resultado seja par a função deve lançar um erro OddNumberError que
+        tem a mensagem "O número é ímpar". O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
+        deve ser mostrado uma mensagem "Finalizando o programa...".
+
+        2) Crie uma função dobrarEm5Segundos(numero) que dobre o valor de um número. Se o número recebido for ímpar a função deve lançar
+        um TypeError com a mensagem "O valor deve ser numérico". O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
+        deve ser mostrado uma mensagem "Finalizando o programa...".
+
+        3) Crie uma função validaUsuario(usuario) que recebe um usuário e retorna true se ele for um usuário válido
+        ou false se ele for inválido.
+        O usuário possui as seguintes propriedades:
+           * nome
+           * email
+           * salario
+           
+           Essa função deve fazer as seguintes verificações:
+
+           Se o nome for menor que 4 caracteres retornar um NameLengthError com a mensagem "O nome deve ter no mínimo 4 caracteres"
+           Se o email for inválido (não tiver @) retornar um EmailError com a mensagem "O email precisa ser válido"
+               * Desafio: use uma RegExp para fazer a validação.
+           Se o salário for menor que 465 retornar um WageError com a mensagem "O salário precisa ser no mínimo R$ 465,00"
+
+           O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
+            deve ser mostrado uma mensagem "Finalizando o programa...".
+        */
     </script>
 </body>
 </html>
