--- a/Aula 41/heranca.html
+++ b/Aula 41/heranca.html
@@ -201,6 +201,63 @@
         
         Ambas as classes Novo e Velho devem implementar um método calculaTotal() que informa
         o valor com o adicional ou com o desconto.
+
+        class Imovel {
+            constructor(endereco, preco) {
+                this.endereco = endereco;
+                this.preco = preco;
+            }
+        }
+
+        class Novo extends Imovel {
+            #valorAdicional;
+            constructor(endereco, preco, valorAdicional) {
+                super(endereco, preco);
+                this.#valorAdicional = valorAdicional;
+            }
+
+            get valorAdicional() {
+                return this.#valorAdicional;
+            }            
+
+            set valorAdicional(valor) {
+                this.#valorAdicional = valor;
+            }
+
+            calculaTotal() {
+                return this.preco + this.#valorAdicional;
+            }
+        }
+
+        class Velho extends Imovel {
+            #valorDesconto;
+            constructor(endereco, preco, valorDesconto) {
+                super(endereco, preco);
+                this.#valorDesconto = valorDesconto;
+            }
+
+            get valorDesconto() {
+                return this.#valorDesconto;
+            }            
+
+            set valorDesconto(valor) {
+                this.#valorDesconto = valor;
+            }
+
+            calculaTotal() {
+                return this.preco - this.#valorDesconto;
+            }
+        }
+
+        const imovelNovo = new Novo("Rua aaa", 1000, 20);        
+        imovelNovo.valorAdicional = 100;
+        console.log(imovelNovo.valorAdicional);
+        console.log(imovelNovo.calculaTotal());
+
+        const imovelVelho = new Velho("Rua aaa", 1000, 20);        
+        imovelVelho.valorDesconto = 100;
+        console.log(imovelVelho.valorDesconto);
+        console.log(imovelVelho.calculaTotal());
         
         4) Crie uma classe Animal que possua os seguintes atributos:
             - nome
@@ -222,6 +279,52 @@
         que mostra um relatório contendo as informações do Mamífero.
 
         Após isso crie um objeto de cada classe e teste os métodos.
+
+        class Animal {
+            constructor(nome, comprimento, numeroPatas, cor, ambiente, velocidadeMedia) {
+                this.nome = nome;
+                this.comprimento = comprimento;
+                this.numeroPatas = numeroPatas;
+                this.cor = cor;
+                this.ambiente = ambiente;
+                this.velocidadeMedia = velocidadeMedia;
+            }
+
+            mostrarDados() {
+                return `Relatório do Animal:\n\nNome: ${this.nome}\nComprimento: ${this.comprimento}\nNúmero de patas: ${this.numeroPatas}\nCor: ${this.cor}\nAmbiente: ${this.ambiente}\nVelocidade Média: ${this.velocidadeMedia}`;
+            }
+        }
+
+        const animal = new Animal("a", 1, 4, "preto", "a", 20);
+        console.log(animal.mostrarDados());
+
+        class Peixe extends Animal {
+            constructor(nome, comprimento, numeroPatas, cor, ambiente, velocidadeMedia, caracteristica) {
+                super(nome, comprimento, numeroPatas, cor, ambiente, velocidadeMedia);
+                this.caracteristica = caracteristica;
+            }
+
+            mostrarDadosPeixe() {
+                return `Relatório do Peixe:\n\nNome: ${this.nome}\nComprimento: ${this.comprimento}\nNúmero de patas: ${this.numeroPatas}\nCor: ${this.cor}\nAmbiente: ${this.ambiente}\nVelocidade Média: ${this.velocidadeMedia}\nCaracterística: ${this.caracteristica}`;
+            }
+        }
+
+        const peixe = new Peixe("a", 1, 4, "preto", "a", 20, "nada");
+        console.log(peixe.mostrarDadosPeixe());
+
+        class Mamifero extends Animal {
+            constructor(nome, comprimento, numeroPatas, cor, ambiente, velocidadeMedia, alimento) {
+                super(nome, comprimento, numeroPatas, cor, ambiente, velocidadeMedia);
+                this.alimento = alimento;
+            }
+
+            mostrarDadosMamifero() {
+                return `Relatório do Mamífero:\n\nNome: ${this.nome}\nComprimento: ${this.comprimento}\nNúmero de patas: ${this.numeroPatas}\nCor: ${this.cor}\nAmbiente: ${this.ambiente}\nVelocidade Média: ${this.velocidadeMedia}\nCaracterística: ${this.alimento}`;
+            }
+        }
+
+        const mamifero = new Mamifero("a", 1, 4, "preto", "a", 20, "carne");
+        console.log(mamifero.mostrarDadosMamifero());
         */
     </script>
 </body>
