--- a/Aula 42/errosCustomizados.html
+++ b/Aula 42/errosCustomizados.html
@@ -11,8 +11,8 @@
         // Podemos criar os nossos próprios erros:
         class UserTypeError extends Error {
             constructor(message) {
-                super(message)
-                this.name = "UserTypeError"
+                super(message);
+                this.name = "UserTypeError";
             }
         }
 
