--- a/Aula 42/errosCustomizados.html
+++ b/Aula 42/errosCustomizados.html
@@ -52,12 +52,12 @@
         tem a mensagem "O número é ímpar". O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
         deve ser mostrado uma mensagem "Finalizando o programa...".
 
-        2) Crie uma função dobrarEm5Segundos(numero) que dobre o valor de um número. Se o número recebido for ímpar a função deve lançar
+        2) Crie uma função dobrar(numero) que dobre o valor de um número. Se o parâmetro recebido não for um número a função deve lançar
         um TypeError com a mensagem "O valor deve ser numérico". O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
         deve ser mostrado uma mensagem "Finalizando o programa...".
 
-        3) Crie uma função validaUsuario(usuario) que recebe um usuário e retorna true se ele for um usuário válido
-        ou false se ele for inválido.
+        3) Crie uma função validaUsuario(usuario) que recebe um usuário e retorna true se ele for um usuário válido ou
+        um erro se ele for inválido.
         O usuário possui as seguintes propriedades:
            * nome
            * email
