--- a/Aula 42/errosCustomizados.html
+++ b/Aula 42/errosCustomizados.html
@@ -48,7 +48,7 @@
         /*
         Exercícios
 
-        1) Crie uma função somar(n1, n2) que some dois números caso o resultado seja par a função deve lançar um erro OddNumberError que
+        1) Crie uma função somar(n1, n2) que some dois números caso o resultado seja ímpar a função deve lançar um erro OddNumberError que
         tem a mensagem "O número é ímpar". O script deve chamar a função e mostrar o resultado ou o erro. Após a execução da função
         deve ser mostrado uma mensagem "Finalizando o programa...".
 
