--- a/Aula 44/promises.html
+++ b/Aula 44/promises.html
@@ -223,6 +223,68 @@
             somar(1, 2)
                 .then(resultado => console.log(`A operação foi bem sucedida! O número ${resultado} é par`))
                 .catch(error => console.log(`A operação falhou! ${error.message}`));
+
+            2) 
+            function dobrarEm5Segundos(numero) {
+                return new Promise((resolve, reject) => {
+                    setTimeout(() => {
+                        if (isNaN(numero)) {
+                            reject(new TypeError("O valor precisa ser numérico"));
+                        } else {
+                            const dobro = numero * 2;
+                            resolve(dobro);
+                        }
+                    }, 5000);
+                });            
+            }
+
+            dobrarEm5Segundos(2)
+                .then(resultado => console.log(`A operação foi bem sucedida! O resultado é ${resultado}`))
+                .catch(error => console.log(`A operação falhou! ${error.message}`));
+            
+            3)
+            const listaPessoas = [
+                {
+                    nome: "João",
+                    idade: 25,
+                    email: "joao@email.com"
+                },
+                {
+                    nome: "Pedro",
+                    idade: 33,
+                    email: "pedro@email.com"
+                },
+                {
+                    nome: "Marcos",
+                    idade: 16,
+                    email: "marcos@email.com"
+                }
+            ];
+
+            class UserNotFoundError extends Error {
+                constructor(message) {
+                    super(message);
+                    this.name = "UserNotFoundError";
+                }
+            }
+
+            function obtemUsuarioPeloNome(nome) {
+                return new Promise((resolve, reject) => {
+                    setTimeout(() => {
+                        const usuario = listaPessoas.find(pessoa => pessoa.nome === nome);
+
+                        if (!usuario) {
+                            reject(new UserNotFoundError("Usuário não está cadastrado"));
+                        } else {
+                            resolve(usuario);
+                        }
+                    }, 3000);
+                });                        
+            }
+
+            obtemUsuarioPeloNome("Pedr")
+                .then(usuario => console.log(`Usuário encontrado:\nnome: ${usuario.nome}\nidade: ${usuario.idade}\nemail: ${usuario.email}.`))
+                .catch(error => console.log(`Ocorreu um erro! ${error.message}.`));
             */
         </script>
   </body>
